# ble-gesture-recognition

./: .gitignore  README.md
docs/: PLAN.md
esp32_ble_inference/: CMakeLists.txt  README.md  prj.conf
esp32_ble_inference/src/: main.cc
phone_collector/: README.md
phone_collector/android_app/: settings.gradle.kts
phone_collector/android_app/app/: build.gradle.kts
phone_collector/android_app/app/src/androidTest/java/com/example/ble_gesture_peripheral/: ExampleInstrumentedTest.kt
phone_collector/android_app/app/src/main/: AndroidManifest.xml
phone_collector/android_app/app/src/main/java/com/example/ble_gesture_peripheral/: BleGattServer.kt  ImuStreamer.kt  MainActivity.kt
phone_collector/android_app/app/src/main/java/com/example/ble_gesture_peripheral/ui/theme/: Color.kt  Theme.kt  Type.kt
phone_collector/android_app/app/src/main/res/values/: strings.xml  themes.xml
phone_collector/android_app/app/src/test/java/com/example/ble_gesture_peripheral/: ExampleUnitTest.kt
phone_collector/android_app/gradle/wrapper/: gradle-wrapper.properties
tools/: analyze_csv.py  ble_imu_recorder.py  http_imu_listener.py  requirements.txt  tflite_to_c.py  udp_imu_listener.py
training/: README.md  preprocess.py  quantize.py  train.py
training/models/: gesture_int8.tflite
